change name lengths; board preview in configs; higher contrast, fix fonts; show help text; fix shape borders

--- a/css/home.css
+++ b/css/home.css
@@ -22,7 +22,7 @@
 	/* heading */
 		#heading {
 			text-transform: uppercase;
-			color: var(--medium-gray);
+			color: var(--light-gray);
 		}
 
 	/* form */
