--- a/css/main.css
+++ b/css/main.css
@@ -266,12 +266,6 @@
 			margin-bottom: var(--large-gap-size);
 		}
 
-		section:last-child {
-			margin-bottom: 0;
-			padding-bottom: 0;
-			border-bottom: none;
-		}
-
 /*** error / toast ***/
 	#toast {
 		position: absolute;
@@ -304,6 +298,64 @@
 		#toast[success=false] {
 			background-color: var(--dark-red);
 		}
+
+/*** helptext ***/
+	.help-text {
+		display: inline-block;
+		vertical-align: top;
+		box-sizing: content-box;
+		height: calc(var(--small-font-size) + 2 * var(--small-gap-size));
+		width: auto;
+		padding: calc(((var(--medium-font-size) + 2 * var(--medium-gap-size)) - var(--small-font-size) - 2 * var(--small-gap-size)) / 2) 0 var(--small-gap-size) var(--medium-gap-size);
+	}
+
+	.help-text[open] {
+		z-index: 1001;
+	}
+
+	.help-text-button {
+		background: var(--medium-gray);
+		font-size: var(--small-font-size);
+		font-family: var(--font-0);
+		color: var(--dark-gray);
+		height: calc(var(--small-font-size) + 2 * var(--small-gap-size));
+		width: calc(var(--small-font-size) + 2 * var(--small-gap-size));
+		padding: var(--small-gap-size);
+		display: block;
+		font-weight: bold;
+	}
+
+	.help-text[open] .help-text-button {
+		color: var(--light-gray);
+		border-radius: var(--border-radius) 0 0 var(--border-radius);
+	}
+
+	.help-text-description {
+		position: relative;
+		top: calc(-1 * (var(--small-font-size) + 2 * var(--small-gap-size)));
+		left: calc(var(--small-font-size) + 2 * var(--small-gap-size));
+		padding: var(--small-gap-size) var(--medium-gap-size) var(--small-gap-size) var(--small-gap-size);
+		display: inline;
+		height: var(--small-font-size);
+		width: auto;
+		font-size: var(--small-font-size);
+		font-weight: normal;
+		font-family: var(--font-0);
+		color: var(--light-gray);
+		line-height: 1;
+		vertical-align: bottom;
+		user-select: none;
+		-webkit-user-select: none;
+		-moz-user-select: none;
+		-ms-user-select: none;
+		-o-user-select: none;
+		pointer-events: none;
+		text-transform: none;
+		background: var(--medium-gray);
+		border-radius: 0 var(--border-radius) var(--border-radius) 0;
+		display: inline-block;
+		z-index: 1001;
+	}
 
 /*** status ***/
 	/* visibility */
